# Motor_Steering

./: .gitignore  Ackermann.m
RPIbridge_PIDController_update/: README.md
RPIbridge_PIDController_update/esp32_platformio_addon/: README.md
RPIbridge_PIDController_update/rpi_ros2_ws_src/aav_speed_control/: README.md  package.xml  setup.cfg  setup.py
RPIbridge_PIDController_update/rpi_ros2_ws_src/aav_speed_control/aav_speed_control/: speed_estimator_node.py  speed_pid_node.py  wheel_encoder_udp_node.py
RPIbridge_PIDController_update/rpi_ros2_ws_src/aav_speed_control/config/: control_params.yaml
RPIbridge_PIDController_update/rpi_ros2_ws_src/aav_speed_control/launch/: vehicle_pid_stack.launch.py
RPIbridge_PIDController_update/rpi_ros2_ws_src/aav_speed_control/resource/: aav_speed_control
RPIbridge_PIDController_update/rpi_ros2_ws_src/aav_uart_bridge/: README.md  package.xml  setup.cfg  setup.py
RPIbridge_PIDController_update/rpi_ros2_ws_src/aav_uart_bridge/aav_uart_bridge/: ackermann_uart_bridge.py  crc16.py  protocol.py
RPIbridge_PIDController_update/rpi_ros2_ws_src/aav_uart_bridge/config/: bridge_params.yaml
RPIbridge_PIDController_update/rpi_ros2_ws_src/aav_uart_bridge/launch/: bridge.launch.py
RPIbridge_PIDController_update/rpi_ros2_ws_src/aav_uart_bridge/resource/: aav_uart_bridge
Throttle_control_addons/esp32_platformio_addon/: README.md
Throttle_control_addons/rpi_ros2_ws_src/aav_uart_bridge/: README.md  package.xml  setup.py
Throttle_control_addons/rpi_ros2_ws_src/aav_uart_bridge/aav_uart_bridge/: ackermann_uart_bridge.py  crc16.py  protocol.py
Throttle_control_addons/rpi_ros2_ws_src/aav_uart_bridge/launch/: bridge.launch.py
aav_ws2/: readme.md
aav_ws2/src/aav_longitudinal_sim/: package.xml  setup.cfg  setup.py  setup.py.save
aav_ws2/src/aav_longitudinal_sim/aav_longitudinal_sim/: plant_node.py  (+4 more)
aav_ws2/src/aav_motor_sim/: setup.cfg  setup.py  setup.py.save
braking/: AAV_fns_breakoverride.cpp  SimulationofBreaking.m
gz_brake_test/: CMakeLists.txt  brake_controller.cc  brake_world.sdf  joint_state_plugin.cc
motor_control_test/: readme.md
motor_control_test/aav_motor_sim/: package.xml  setup.py
motor_control_test/aav_motor_sim/aav_motor_sim/: motor_sim_node.py  motor_sim_tester.py
src/steering_controller/: package.xml  setup.py
src/steering_controller/steering_controller/: I2CCommunication.py  MockImuPublisher.py  first_node.py  imu_spd.py  imu_subscriber.py  mock_NAV_Publisher.py  nav_subscriber.py  steer_subscriber.py  temp_steer_2_P_only.py  test_steering.py
(+9 files in other folders)
