<?xml version="1.0"?>
<package format="3">
  <name>aav_speed_control</name>
  <version>0.1.0</version>
  <description>Wheel encoder UDP receiver, speed estimator, and first-pass speed PID for the AAV.</description>
  <maintainer email="user@example.com">AAV User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
