<?xml version="1.0"?>
<package format="3">
  <name>aav_uart_bridge</name>
  <version>0.1.0</version>
  <description>UART bridge from ROS 2 Ackermann commands to ESP32 framed actuator commands.</description>
  <maintainer email="user@example.com">AAV User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
