<?xml version="1.0"?>
<package format="3">
  <name>aav_uart_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 AckermannDrive -> UART bridge to ESP32 (no micro-ROS)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>

  <!-- For serial IO -->
  <exec_depend>python3-serial</exec_depend>

</package>
